--- a/public/locales/af/translation.json
+++ b/public/locales/af/translation.json
@@ -201,6 +201,7 @@
     "website": "Besoek ons webwerf",
     "terms": "Gebruiksvoorwaardes",
     "privacy": "Privaatheidsbeleid",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Verbonde werwe",
       "removeSiteTitle": "Verwyder werf",
