--- a/public/locales/bg/translation.json
+++ b/public/locales/bg/translation.json
@@ -201,6 +201,7 @@
     "website": "Посетете уебсайта ни",
     "terms": "Условия за ползване",
     "privacy": "Политика за поверителност",
+    "cashback": "Кешбек",
     "connectedSitesPage": {
       "title": "Свързани сайтове",
       "removeSiteTitle": "Премахване на сайт",
