--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -201,6 +201,7 @@
     "website": "আমাদের ওয়েবসাইট দেখুন",
     "terms": "ব্যবহারের শর্তাদি",
     "privacy": "গোপনীয়তা নীতি",
+    "cashback": "ক্যাশব্যাক",
     "connectedSitesPage": {
       "title": "সংযুক্ত সাইট",
       "removeSiteTitle": "সাইট মুছুন",
