--- a/public/locales/ca/translation.json
+++ b/public/locales/ca/translation.json
@@ -201,6 +201,7 @@
     "website": "Visita el nostre lloc web",
     "terms": "Termes d’ús",
     "privacy": "Política de privacitat",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Llocs connectats",
       "removeSiteTitle": "Elimina lloc",
