--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -201,6 +201,7 @@
     "website": "Navštivte náš web",
     "terms": "Podmínky použití",
     "privacy": "Zásady ochrany osobních údajů",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Připojené stránky",
       "removeSiteTitle": "Odstranit stránku",
