--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -201,6 +201,7 @@
     "website": "Besuche unsere Website",
     "terms": "Nutzungsbedingungen",
     "privacy": "Datenschutzrichtlinie",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Verbundene Seiten",
       "removeSiteTitle": "Seite entfernen",
