--- a/public/locales/el/translation.json
+++ b/public/locales/el/translation.json
@@ -200,7 +200,8 @@
     "discord": "Επισκεφθείτε το Discord μας",
     "website": "Επισκεφθείτε τον ιστότοπό μας",
     "terms": "Όροι χρήσης",
-    "privacy": "Πολιτική απορρήτου"
+    "privacy": "Πολιτική απορρήτου",
+    "cashback": "Επιστροφή χρημάτων"
   },
   "sendTransactions": {
     "header": "Αποστολή συναλλαγής {{symbol}}"
