--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -199,6 +199,7 @@
     "website": "Visit our website",
     "terms": "Terms of use",
     "privacy": "Privacy Policy",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Connected Sites",
       "removeSiteTitle": "Remove site",
