--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -201,6 +201,7 @@
     "website": "Visita nuestro sitio web",
     "terms": "Términos de uso",
     "privacy": "Política de privacidad",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Sitios conectados",
       "removeSiteTitle": "Eliminar sitio",
