--- a/public/locales/fi/translation.json
+++ b/public/locales/fi/translation.json
@@ -201,6 +201,7 @@
     "website": "Vieraile verkkosivustollamme",
     "terms": "Käyttöehdot",
     "privacy": "Tietosuojakäytäntö",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Yhdistetyt sivustot",
       "removeSiteTitle": "Poista sivusto",
