--- a/public/locales/fil/translation.json
+++ b/public/locales/fil/translation.json
@@ -201,6 +201,7 @@
     "website": "Bisitahin ang aming website",
     "terms": "Mga Tuntunin ng Paggamit",
     "privacy": "Patakaran sa Privacy",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Mga nakakonektang site",
       "removeSiteTitle": "Tanggalin ang site",
