--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -199,8 +199,9 @@
     "lockSettingsDesc": "Modifier les paramètres de sécurité",
     "discord": "Rejoignez notre Discord",
     "website": "Visitez notre site web",
-    "terms": "Conditions d’utilisation",
+    "terms": "Conditions d'utilisation",
     "privacy": "Politique de confidentialité",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Sites connectés",
       "removeSiteTitle": "Supprimer le site",
