--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -201,6 +201,7 @@
     "website": "हमारी वेबसाइट देखें",
     "terms": "उपयोग की शर्तें",
     "privacy": "गोपनीयता नीति",
+    "cashback": "कैशबैक",
     "connectedSitesPage": {
       "title": "कनेक्टेड साइटें",
       "removeSiteTitle": "साइट हटाएँ",
