--- a/public/locales/hu/translation.json
+++ b/public/locales/hu/translation.json
@@ -201,6 +201,7 @@
     "website": "Weboldalunk megtekintése",
     "terms": "Felhasználási feltételek",
     "privacy": "Adatvédelmi szabályzat",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Csatlakoztatott oldalak",
       "removeSiteTitle": "Oldal eltávolítása",
