--- a/public/locales/id/translation.json
+++ b/public/locales/id/translation.json
@@ -201,6 +201,7 @@
     "website": "Kunjungi situs kami",
     "terms": "Syarat Penggunaan",
     "privacy": "Kebijakan Privasi",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Situs terhubung",
       "removeSiteTitle": "Hapus situs",
