--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -199,6 +199,7 @@
     "website": "Visita il nostro sito web",
     "terms": "Termini di utilizzo",
     "privacy": "Informativa sulla privacy",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Siti Collegati",
       "removeSiteTitle": "Rimuovi sito",
