--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -201,6 +201,7 @@
     "website": "웹사이트 방문",
     "terms": "이용 약관",
     "privacy": "개인정보 보호정책",
+    "cashback": "캐시백",
     "connectedSitesPage": {
       "title": "연결된 사이트",
       "removeSiteTitle": "사이트 제거",
