--- a/public/locales/ms/translation.json
+++ b/public/locales/ms/translation.json
@@ -201,6 +201,7 @@
     "website": "Lawati laman web kami",
     "terms": "Terma penggunaan",
     "privacy": "Dasar privasi",
+    "cashback": "Tunai balik",
     "connectedSitesPage": {
       "title": "Laman disambungkan",
       "removeSiteTitle": "Buang laman",
