--- a/public/locales/nl/translation.json
+++ b/public/locales/nl/translation.json
@@ -201,6 +201,7 @@
     "website": "Bezoek website",
     "terms": "Gebruiksvoorwaarden",
     "privacy": "Privacybeleid",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Verbonden sites",
       "removeSiteTitle": "Site verwijderen",
