--- a/public/locales/no/translation.json
+++ b/public/locales/no/translation.json
@@ -201,6 +201,7 @@
     "website": "Besøk nettsted",
     "terms": "Vilkår for bruk",
     "privacy": "Personvernpolicy",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Tilkoblede sider",
       "removeSiteTitle": "Fjern side",
