--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -201,6 +201,7 @@
     "website": "Odwiedź stronę",
     "terms": "Warunki użytkowania",
     "privacy": "Polityka prywatności",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Połączone strony",
       "removeSiteTitle": "Usuń stronę",
