--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -201,6 +201,7 @@
     "website": "Visite nosso site",
     "terms": "Termos de uso",
     "privacy": "Política de privacidade",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Sites conectados",
       "removeSiteTitle": "Remover site",
