--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -201,6 +201,7 @@
     "website": "Visit website",
     "terms": "Termeni de utilizare",
     "privacy": "Politica de confidențialitate",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Site-uri conectate",
       "removeSiteTitle": "Elimină site",
