--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -201,6 +201,7 @@
     "website": "Посетить наш сайт",
     "terms": "Условия использования",
     "privacy": "Политика конфиденциальности",
+    "cashback": "Кэшбэк",
     "connectedSitesPage": {
       "title": "Подключённые сайты",
       "removeSiteTitle": "Удалить сайт",
