--- a/public/locales/sk/translation.json
+++ b/public/locales/sk/translation.json
@@ -201,6 +201,7 @@
     "website": "Navštíviť web",
     "terms": "Podmienky používania",
     "privacy": "Zásady ochrany osobných údajov",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Pripojené stránky",
       "removeSiteTitle": "Odstrániť stránku",
