--- a/public/locales/sl/translation.json
+++ b/public/locales/sl/translation.json
@@ -201,6 +201,7 @@
     "website": "Obiščite našo spletno stran",
     "terms": "Pogoji uporabe",
     "privacy": "Politika zasebnosti",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Povezane strani",
       "removeSiteTitle": "Odstrani stran",
