--- a/public/locales/sv/translation.json
+++ b/public/locales/sv/translation.json
@@ -201,6 +201,7 @@
     "website": "Besök webbplats",
     "terms": "Användarvillkor",
     "privacy": "Integritetspolicy",
+    "cashback": "Cashback",
     "connectedSitesPage": {
       "title": "Anslutna webbplatser",
       "removeSiteTitle": "Ta bort webbplats",
