--- a/public/locales/ta/translation.json
+++ b/public/locales/ta/translation.json
@@ -200,7 +200,8 @@
     "discord": "எமது Discord-ல் சேர்ந்துகொள்ளவும்",
     "website": "எமது இணையதளத்தைப் பார்வையிடவும்",
     "terms": "பயன்பாட்டு நிபந்திரங்கள்",
-    "privacy": "தனியுரிமைக் கொள்கை"
+    "privacy": "தனியுரிமைக் கொள்கை",
+    "cashback": "கேஷ்பேக்"
   },
   "sendTransactions": {
     "header": "{{symbol}} பரிவர்த்தனையை அனுப்பு"
