--- a/public/locales/th/translation.json
+++ b/public/locales/th/translation.json
@@ -201,6 +201,7 @@
     "website": "เยี่ยมชมเว็บไซต์ของเรา",
     "terms": "ข้อกำหนดการใช้",
     "privacy": "นโยบายความเป็นส่วนตัว",
+    "cashback": "เงินคืน",
     "connectedSitesPage": {
       "title": "เว็บไซต์ที่เชื่อมต่อ",
       "removeSiteTitle": "ลบเว็บไซต์",
