--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -201,6 +201,7 @@
     "website": "Відвідати наш сайт",
     "terms": "Умови використання",
     "privacy": "Політика конфіденційності",
+    "cashback": "Кешбек",
     "connectedSitesPage": {
       "title": "Підключені сайти",
       "removeSiteTitle": "Видалити сайт",
