--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -201,6 +201,7 @@
     "website": "访问我们的网站",
     "terms": "使用条款",
     "privacy": "隐私政策",
+    "cashback": "返现",
     "connectedSitesPage": {
       "title": "已连接网站",
       "removeSiteTitle": "移除网站",
