--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -201,6 +201,7 @@
     "website": "ウェブサイトへ",
     "terms": "利用規約",
     "privacy": "プライバシーポリシー",
+    "cashback": "キャッシュバック",
     "connectedSitesPage": {
       "title": "接続済みサイト",
       "removeSiteTitle": "サイトを削除",
