--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -201,6 +201,7 @@
     "website": "Truy cập trang web",
     "terms": "Điều khoản dịch vụ",
     "privacy": "Chính sách bảo mật",
+    "cashback": "Hoàn tiền",
     "connectedSitesPage": {
       "title": "Trang đã kết nối",
       "removeSiteTitle": "Xóa trang",
