--- a/public/locales/zh_TW/translation.json
+++ b/public/locales/zh_TW/translation.json
@@ -201,6 +201,7 @@
     "website": "造訪我們的網站",
     "terms": "使用條款",
     "privacy": "隱私政策",
+    "cashback": "現金回饋",
     "connectedSitesPage": {
       "title": "已連線網站",
       "removeSiteTitle": "移除網站",
