--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -202,6 +202,7 @@
     "terms": "Nutzungsbedingungen",
     "privacy": "Datenschutzrichtlinie",
     "cashback": "Cashback",
+    "cashbackDesc": "Online mit jeder Karte einkaufen. Erhalte Cashback in KDA",
     "connectedSitesPage": {
       "title": "Verbundene Seiten",
       "removeSiteTitle": "Seite entfernen",
@@ -644,7 +645,7 @@
     "wallet": "Brieftasche",
     "analytics": "Analyse",
     "nft": "NFT",
-    "settings": "Einstellungen"
+    "settings": "MENU"
   },
   "swap": {
     "chain2Warning": {
