--- a/public/locales/ms/translation.json
+++ b/public/locales/ms/translation.json
@@ -202,6 +202,7 @@
     "terms": "Terma penggunaan",
     "privacy": "Dasar privasi",
     "cashback": "Tunai balik",
+    "cashbackDesc": "Beli-belah dalam talian dengan mana-mana kad. Dapatkan tunai balik dalam KDA",
     "connectedSitesPage": {
       "title": "Laman disambungkan",
       "removeSiteTitle": "Buang laman",
