--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -202,6 +202,7 @@
     "terms": "Warunki użytkowania",
     "privacy": "Polityka prywatności",
     "cashback": "Cashback",
+    "cashbackDesc": "Kupuj online dowolną kartą. Otrzymuj cashback w KDA",
     "connectedSitesPage": {
       "title": "Połączone strony",
       "removeSiteTitle": "Usuń stronę",
@@ -644,6 +645,6 @@
     "wallet": "PORTFEL",
     "analytics": "ANALITYKA",
     "nft": "NFT",
-    "settings": "USTAWIENIA"
+    "settings": "MENU"
   }
 }
