--- a/public/locales/sk/translation.json
+++ b/public/locales/sk/translation.json
@@ -202,6 +202,8 @@
     "terms": "Podmienky používania",
     "privacy": "Zásady ochrany osobných údajov",
     "cashback": "Cashback",
+    "cashbackDesc": "Nakupujte online akoukoľvek kartou. Získajte cashback v KDA",
+    "cashbackDesc": "Nakupujte online akoukoľvek kartou. Získajte cashback v KDA",
     "connectedSitesPage": {
       "title": "Pripojené stránky",
       "removeSiteTitle": "Odstrániť stránku",
@@ -593,5 +595,5 @@
     "options": { "all": "Všetky", "in": "Prijaté", "out": "Odoslané", "pending": "Čakajúce" }
   },
   "tokenFilter": { "modalTitle": "Token", "prefix": "Aktívne: ", "options": { "all": "Všetky" } },
-  "footer": { "wallet": "PEŇAŽENKA", "analytics": "ANALYTIKA", "nft": "NFT", "settings": "NASTAVENIA" }
+  "footer": { "wallet": "PEŇAŽENKA", "analytics": "ANALYTIKA", "nft": "NFT", "settings": "MENU" }
 }
